fix blockquote styling in dark mode

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -254,4 +254,9 @@ blockquote > p {
     td {
         border-color: white;
     }
+
+    blockquote {
+        background: rgba(255, 255, 255, 0.1);
+        border-left: 2px solid rgba(255, 255, 255, 0.4);
+    }
 }
